Align the chevrons correctly with the conversation links

--- a/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/modules/_cards.scss
@@ -493,6 +493,11 @@ a .card__title{
   }
 }
 
+.card--list__data__icon--back.icon--big{
+  position: relative;
+  top: 5px;
+}
+
 .card--list__item{
   display: flex;
   align-items: center;
